--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
+    "swr": "^2.0.4",
     "typescript": "4.9.5"
   }
 }
